Tools/AstGenerator/ExpressionAst.bnf
Expression
Assign      : Token Name, IExpression Value
Binary      : IExpression Left, Token Operator, IExpression Right
Logical     : IExpression Left, Token Operator, IExpression Right
Unary       : Token Operator, IExpression Right
Call        : IExpression Callee, Token Paren, List<IExpression> Arguments
Get         : IExpression Owner, Token Name
Set         : IExpression Owner, Token Name, IExpression Value
This        : Token Keyword
Grouping    : IExpression Expr
Literal     : object? Value
Variable    : Token Name
